Change the colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!--<script src='main.js'></script> -->
 
-    <title>Page Title</title>
+    <title>Eric Says Hello</title>
 
 </head>
 <body>
