New background color and image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <link rel="shortcut icon" type="image/png" href="img/pawn1.png">
-
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
     <!--<script src='main.js'></script> -->
 
     <title>Eric Says Hello</title>
@@ -44,7 +44,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-facebook-with-circle"></use>
                     </svg>
-                    <span class="social__text">connect on facebook</span> 
+                    <span class="social__text">facebook</span> 
                 </a>
                 </li>
 
@@ -52,7 +52,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-twitter-with-circle"></use>
                     </svg>
-                    <span class="social__text">connect on twitter</span> 
+                    <span class="social__text">twitter</span> 
                 </a>
                 </li>
 
@@ -60,7 +60,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-linkedin-with-circle"></use>
                     </svg>
-                    <span class="social__text">connect on linkedin</span> 
+                    <span class="social__text">linkedin</span> 
                 </a>
                 </li>
 
@@ -68,7 +68,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-thumbs-up"></use>
                     </svg>
-                    <span class="social__text">connect on github</span> 
+                    <span class="social__text">github</span> 
                 </a>
                 </li>
 
@@ -76,7 +76,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-mail"></use>
                     </svg>
-                    <span class="social__text">send email</span> 
+                    <span class="social__text">email</span> 
                 </a>
                 </li>
 
@@ -84,7 +84,7 @@
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-chat"></use>
                     </svg>
-                    <span class="social__text">view resume</span> 
+                    <span class="social__text">resume</span> 
                 </a>
                 </li>
             </ul>
