Add responsive design to the homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
     <!--<script src='main.js'></script> -->
 
-    <title>Eric Says Hello</title>
+    <title>Eric | Developer</title>
 
 </head>
 <body>
