--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="navigation cont">
+        <div class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">home</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">projects</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">about me</a></li>
+                <li class="navigation__item"><a href="index.html" class="navigation__link">home</a></li>
+                <li class="navigation__item"><a href="projects.html" class="navigation__link">projects</a></li>
+                <li class="navigation__item"><a href="about.html" class="navigation__link">about me</a></li>
             </ul>
         </div>
 
-        <div class="text-box cont">
+        <div class="text-box">
             <div class="text-box__text">
                 <span class="text-box__text--main"><h1>Hey am eric !</h1></span>
                 <hr>
-                <span class="text-box__text--sub"><h1>iam glad you're here</h1></span>
+                <span class="text-box__text--sub"><h1>i'm glad you're here</h1></span>
 
             </div>
 
@@ -38,7 +38,7 @@
             </div>
         </div>
         
-        <div class="social cont">
+        <div class="social">
             <ul class="social__list">
                 <li class="social__item"><a href="#" class="social__link">
                     <svg class="social__icon">
