Style the checkout button

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci inventore harum ipsa repudiandae vitae molestias consectetur facilis neque excepturi. Pariatur tempora enim,officia perspiciatis fugit sequi blanditiis nisi vero magni! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus facilis saepe excepturi temporibus cupiditate possimus totam vitae aliquid, assumenda, rerum qui! Laboriosam quam consectetur tempora  velit fugit, distinctio recusandae eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ducimus suscipit explicabo molestiae aperiam officiis modi cumque eligendi, veritatis recusandae perspiciatis libero velit eum. Qui modi hic aut ex explicabo.</p>
 
                     <div class="btn">
-                        <a href="#"><button class="btn__checkout">check out projects</button></a>
+                        <a href="projects.html"><button class="btn__checkout">check out projects</button></a>
                     </div>
                 </div>
             </div>
