Add and style the projects page

--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,13 @@
                             <div class="project__inner-div js-width"></div>
                         </div>
                     </div>
+
+                    <div class="project__row">
+                        <p class="project__skills-text"> machine learning with tensorflow</p>
+                        <div class="project__outer-div">
+                            <div class="project__inner-div tf-width"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="project__languages">
@@ -84,7 +91,7 @@
             <div class="project__space">
                 <div class="project__content">
                     <div class="project__image">
-                        <img src="img/pic1.jpeg" alt="Project photo" class="project__img">
+                        <img src="img/night.jpeg" alt="Project photo" class="project__img">
                     </div>
                     <div class="project__text-box">
                         <h5 class="project__heading">Fashion MNIST Neural Network</h5>
@@ -92,7 +99,88 @@
                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
                         </p>
                     </div>
+                    <div class="project__external">
+                        <div class="project__source">
+                            <button class="project__btn ">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>source</span>
+                            </button>
+                        </div>
+
+                        <div class="project__source">
+                            <button class="project__btn">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>demo</span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="project__content">
+                    <div class="project__image">
+                        <img src="img/glass.jpg" alt="Project photo" class="project__img">
+                    </div>
+                    <div class="project__text-box">
+                        <h5 class="project__heading">CIFAR-10 IMAGE CLASSIFIER</h5>
+                        <p class="project__text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
+                        </p>
+                    </div>
+                    <div class="project__external">
+                        <div class="project__source">
+                            <button class="project__btn ">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>source</span>
+                            </button>
+                        </div>
+
+                        <div class="project__source">
+                            <button class="project__btn">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>demo</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="project__content">
+                    <div class="project__image">
+                        <img src="img/pic1.jpeg" alt="Project photo" class="project__img">
+                    </div>
+                    <div class="project__text-box">
+                        <h5 class="project__heading">Obviously this website</h5>
+                        <p class="project__text">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
+                        </p>
+                    </div>
+                    <div class="project__external">
+                        <div class="project__source">
+                            <button class="project__btn ">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>source</span>
+                            </button>
+                        </div>
+
+                        <div class="project__source">
+                            <button class="project__btn">
+                                <svg class="project__icon">
+                                    <use xlink:href = "img/sprite.svg#icon-star"></use>
+                                </svg>
+                                <span>demo</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             
         </div>
