Replacing placeholder text

--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
                     <img src="img/eric1.jpg" alt="eric" class="content__img">
                 </figure>
                 <div class="content__text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci inventore harum ipsa repudiandae vitae molestias consectetur facilis neque excepturi. Pariatur tempora enim,officia perspiciatis fugit sequi blanditiis nisi vero magni! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus facilis saepe excepturi temporibus cupiditate possimus totam vitae aliquid, assumenda, rerum qui! Laboriosam quam consectetur tempora  velit fugit, distinctio recusandae eveniet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ducimus suscipit explicabo molestiae aperiam officiis modi cumque eligendi, veritatis recusandae perspiciatis libero velit eum. Qui modi hic aut ex explicabo.</p>
+                    <p>Who am I you ask? Well, ill tell you, right after this short break... I am Eric Macharia a former student at Kenyatta University, doing;haha, Bachelor in science mathematics and computer science and currently a freelance programmer. I love python,like most people, (not the snake!!) mainly python for machine learning and AI development. On my free time(almost everytime), you'll find me playing chess. You can challenge me at chess.com (ndikwenda)
+                    </p>
 
                     <div class="cta">
                         <a href="projects.html"><button class="cta__checkout">check out projects</button></a>
