--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container cont">
         <div class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item"><a href="index.html" class="navigation__link">home</a></li>
@@ -96,7 +96,8 @@
                     <div class="project__text-box">
                         <h5 class="project__heading">Fashion MNIST Neural Network</h5>
                         <p class="project__text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
+                            This program was created using python for machine learning and the Tensorflow algorithm. It uses the FASHION MNIST dataset consisting of 60,000 images 28 x 28 greyscale images. 50,000 for the training set and 10,000 for the testing set. It can predict the correct label of clothing articles with an accuracy of 96%. The clothing articles are divided into 10 groups; T-shirt/top, Trouser, Pullover, Dress, Coat, Sandal, Shirt, Sneaker, Bag, Ankle boot.
+                            
                         </p>
                     </div>
                     <div class="project__external">
@@ -127,7 +128,8 @@
                     <div class="project__text-box">
                         <h5 class="project__heading">CIFAR-10 IMAGE CLASSIFIER</h5>
                         <p class="project__text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
+                            This is an image classifier also built using python for machine learning and the Tensorflow algorithm and can classify an image with an accuracy of 98%. The CIFAR-10 dataset contains 60,000 32x32 color images in 10 different classes. The 10 different classes represent airplanes, cars, birds, cats, deer,dogs, frogs, horses, ships, and trucks. There are 6,000 images of each class.
+                            The CIFAR-10 dataset is a collection of images that are commonly used to train machine learning and computer vision algorithms. 
                         </p>
                     </div>
                     <div class="project__external">
@@ -157,7 +159,7 @@
                     <div class="project__text-box">
                         <h5 class="project__heading">Obviously this website</h5>
                         <p class="project__text">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum autatquenesciunt illum vel cupiditate nihil dolore quidem, reprehenderitteneturodit minus nulla omnis iure consequuntur cum in placeat.Magnam. Loremipsum dolor sit amet consectetur adipisicing elit. Iustolabore ullamlaboriosam facere reiciendis quisquam itaque debitis,eligendi sit,doloremque et, numquam totam hic modi animi quod culpaconsequuntur neque.
+                            This is my personal portfolio. The program flexes the complete power of sass, in code reusability and readability. The html is built using the Block Element method (BEM). The CSS is mainly FlexBox.
                         </p>
                     </div>
                     <div class="project__external">
