Links going somewhere

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <link rel="shortcut icon" type="image/png" href="img/pawn1.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700&display=swap" rel="stylesheet">
-    <!--<script src='main.js'></script> -->
+    <script src='main.js'></script> 
 
     <title>Eric | Developer</title>
 
@@ -40,7 +40,7 @@
         
         <div class="social">
             <ul class="social__list">
-                <li class="social__item"><a href="#" class="social__link">
+                <li class="social__item"><a href="https://www.linkedin.com/in/the-macharia" class="social__link" target="_blank">
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-linkedin-with-circle"></use>
                     </svg>
@@ -48,7 +48,7 @@
                 </a>
                 </li>
 
-                <li class="social__item"><a href="#" class="social__link">
+                <li class="social__item"><a href="https://github.com/The-macharia" class="social__link" target="_blank">
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-thumbs-up"></use>
                     </svg>
@@ -56,7 +56,7 @@
                 </a>
                 </li>
 
-                <li class="social__item"><a href="#" class="social__link">
+                <li class="social__item"><a href="mailto:wawerurc@outlook.com" class="social__link">
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-mail"></use>
                     </svg>
@@ -64,7 +64,7 @@
                 </a>
                 </li>
 
-                <li class="social__item"><a href="#" class="social__link">
+                <li class="social__item"><a href="https://drive.google.com/open?id=145ork-olAblh4Vku7QWrEoagnZKT-1tl" class="social__link" target="_blank">
                     <svg class="social__icon">
                         <use xlink:href="img/sprite.svg#icon-chat"></use>
                     </svg>
