--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="text-box__text">
                 <span class="text-box__text--main"><h1>Hey am eric !</h1></span>
                 <hr>
-                <span class="text-box__text--sub"><h1>i'm glad you're here</h1></span>
+                <span class="text-box__text--sub"><h1>Python and web developer</h1></span>
 
             </div>
 
@@ -75,5 +75,13 @@
         </div>
 
     </div>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/6.4.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
 </body>
 </html>
